--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "react-emoji": "^0.5.0",
     "react-router": "^6.26.2",
     "react-router-dom": "^6.26.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-scroll-to-bottom": "^4.2.0",
     "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4"
@@ -45,8 +45,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.25.9",
     "cross-env": "^7.0.3"
   },
   "homepage": "./"
-
 }
