--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
-# Local Netlify folder
-.netlify
-.node_modules
+# Ignore Netlify build folder
+.netlify/
+
+# Ignore all node_modules folders
+node_modules/
+
+# Ignore environment variable files
+.env
+
+# Optional: ignore log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Optional: Ignore Docker-related files (if using Docker)
+docker-compose.dev.yml
+*.local
