--- a/server/Dockerfile.dev
+++ b/server/Dockerfile.dev
@@ -2,13 +2,14 @@ FROM node:20-alpine
 
 WORKDIR /app
 
-# Set NODE_ENV to development before install
 ENV NODE_ENV=development
 
 COPY package.json package-lock.json ./
-
 RUN npm install -g nodemon
 
 COPY . .
+
+#  Add this line
+EXPOSE 3000
 
 CMD ["npm", "start"]
