--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "set PORT=5173 && react-scripts start",
+    "start": "cross-env PORT=5173 react-scripts start",
     "dev": "nodemon --legacy-watch index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
